# HakuRiver

./: .gitignore  LICENSE  README-ZH.md  README.md  README.zh.md  demo_hakurun.py  parse_doc.py  pyproject.toml  temp.txt
configs/host/: default.py  example.py
configs/runner/: default.py  example.py
docs/: README.md
docs/1. getting-started/: 1. overview.md  2. installation.md  3. quick-start.md  4. concepts.md  5. alternatives.md
docs/2. admin-guides/: 1. host-setup.md  2. runner-setup.md  3. shared-storage.md  4. systemd-integration.md  5. security.md
docs/3. user-guides/: 1. container-workflow.md  2. task-submission.md  3. web-dashboard.md  4. hakurun-utility.md  5. monitoring.md
docs/3. user-guides/2. command-tasks/: 1. submission.md  2. best-practices.md
docs/3. user-guides/3. vps-tasks/: 1. management.md  2. ssh-access.md  3. container-prep.md  4. common-use-cases.md
docs/3. user-guides/4. gpu-allocation/: 1. allocation.md  2. container-prep.md
docs/3. user-guides/5. web-dashboard/: 1. overview.md  2. ui-task-submission.md  3. ui-monitoring.md  4. ui-docker.md
docs/3. user-guides/6. monitoring/: 1. monitoring.md  2. interpreting-logs.md
docs/3. user-guides/7. hakurun-utility/: 1. utility.md
docs/4. reference/: 1. configuration.md  2. cli-reference.md  2. client-commands.md  3. docker-commands.md  3. task-commands.md  4. api-reference.md  4. vps-commands.md  5. architecture.md  5. ssh-command.md  6. api-reference.md  7. architecture.md
docs/5. troubleshooting/: 1. common-issues.md  1. troubleshooting.md  2. task-execution.md  3. vps-ssh.md  4. network-permissions.md
docs/6. integration-guides/: 1. external-monitoring.md  1. integration.md  2. workflow-managers.md  3. notifications.md
frontend/: .prettierrc.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: LogContentModal.vue  TerminalModal.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/utils/: docker.js  (+1 more)
image/: logo.html
scripts/: cleanup_hakuriver.sh
src/hakuriver/: __init__.py
src/hakuriver-manager/: .prettierrc  index.html  package-lock.json  package.json
src/hakurun/: run.py
src/kohakuriver/: __init__.py  version.py
src/kohakuriver-manager/: index.html  package-lock.json  package.json  uno.config.js  vite.config.js
(+266 files in other folders)
