[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hakuriver"
version = "0.0.1"
description = "A multi-node resource management tool with CPU core as unit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com"},
]
dependencies = [
    "peewee",
    "fastapi",
    "httpx",
    "psutil",
    "toml",
    "uvicorn",
    "snowflake-id"
]

[project.urls]
Homepage = "https://github.com/KohakuBlueleaf/HakuRiver"
Repository = "https://github.com/KohakuBlueleaf/HakuRiver"

[project.scripts]
"hakuriver.host" = "hakuriver.cli.host:main"
"hakuriver.client" = "hakuriver.cli.client:main"
"hakuriver.runner" = "hakuriver.cli.runner:main"
"hakuriver.init" = "hakuriver.cli.init:main"
"hakurun" = "hakurun.run:runner"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]