[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hakuriver"
version = "0.3.0"
description = "A lightweight clustering tool with Docker container as virtual env."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
    {name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com"},
]
dependencies = [
    "kohaku-engine",
    "kohakuvault",
    "peewee",
    "fastapi",
    "httpx",
    "psutil",
    "uvicorn[standard]",
    "snowflake-id",
    "docker",
    "websockets",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
gpu = [
    "pynvml"
]

[project.urls]
Homepage = "https://github.com/KohakuBlueleaf/HakuRiver"
Repository = "https://github.com/KohakuBlueleaf/HakuRiver"

[project.scripts]
# Main entry points (3 total)
"hakuriver" = "hakuriver.cli.main:run"
"hakuriver.host" = "hakuriver.cli.host:main"
"hakuriver.runner" = "hakuriver.cli.runner:main"
# Keep hakurun for compatibility
"hakurun" = "hakurun.run:runner"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hakuriver = ["*.toml"]